# riscv_em

./: CMakeLists.txt  README.md  github_ci_prepare.sh  github_ci_run_tests.sh  main.c  riscv_clint.c  riscv_clint.h  riscv_config.h  riscv_core.c  riscv_core.h  riscv_csr.c  riscv_csr.h  riscv_em.c  riscv_helper.h  riscv_instr.h  riscv_soc.c  riscv_soc.h  riscv_types.h
.github/workflows/: riscv_em_tests.yml
dts/: build_dtb.sh  riscv_em.dtb  riscv_em.dts  riscv_em.orig.dtb  riscv_em.orig.dts  riscv_em.redhog.dts  riscv_em32_linux.dtb  riscv_em32_linux.dts  riscv_em_backup.dts
firmware/: build_fw.sh  hello_world_fw.elf  hx8kdemo_fw.elf  main.c  sections.lds  start.s  test1.c  test1.s
isa_test_env/riscv_em/: build_test.sh  link.ld  riscv_test.h
src/: main.c
src/core/: clint.c  clint.h  core.c  core.h  csr.c  csr.h  riscv_clint.c  riscv_clint.h  riscv_config.h  riscv_core.c  riscv_core.h  riscv_csr.c  riscv_helper.h  riscv_instr.h  riscv_types.h  riscv_xlen_specifics.h
src/core/csr/: csr.c  csr.h
src/core/mmu/: CMakeLists.txt  mmu.c  mmu.h  unit_tests.c
src/core/pmp/: CMakeLists.txt  pmp.c  pmp.h  unit_tests.c
src/core/trap/: CMakeLists.txt  trap.c  trap.h  unit_tests.c
src/helpers/: fifo.c  fifo.h  fifo_test.c  file_helper.c  file_helper.h
src/peripherals/: build_periph_tests.sh  clint.c  clint.h  plic.c  plic.h  plic_test.c  simple_uart.c  uart.c  uart.h  uart_8250.c
src/peripherals/clint/: clint.c  clint.h
src/peripherals/plic/: CMakeLists.txt  plic.c  plic.h  unit_tests.c
src/peripherals/uart/: simple_uart.c  simple_uart.h  uart_8250.c  uart_8250.h
src/soc/: riscv_example_soc.c  riscv_example_soc.h
